# sheet-to-triples

./: .coveragerc  .gitignore  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: gate.yml
sheet_to_triples/: __main__.py  csv.py  debug.py  field.py  rdf.py  read_csv.py  run.py  trans.py  xl.py  xls.py  xlsx.py
sheet_to_triples/tests/: test_field.py  test_main.py  test_rdf.py  test_run.py  test_trans.py  test_xl.py
transforms/: cities.py  corona.py  eco_home.py  eco_marker.py  eco_markers.py  eco_materials.py  eco_movements.py  eco_stories.py  eco_storypoints.py  ecov_movements.py  ecov_stories.py  he_class_icons.py  he_delivery_partner.py  he_doc.py  he_group.py  he_int_markers.py  he_int_stories.py  he_it_system.py  he_org.py  he_person.py  he_role.py  he_views.py  hwx_views.py  lmru_painpoints.py  lmru_stakeholders.py  mgs_stakeholders.py  mgs_views.py  mgsbr_points.py  mgsbr_stakeholders.py  mgsbr_views.py  mgsru_points.py  pcc_cities.py  pcc_stories.py  ris3_list.txt  ris3_risk.py  ris3_views.py
transforms/example/: README.md  UK Temperature Data.xlsx  uk_temp.py
transforms/he/: he_activity_type.py  he_capability.py  he_capability2activity.py  he_data_asset.py  he_itsystem.py  he_itsystem2activity.py  he_orgunit.py  he_orgunit2activity.py  he_perfmeasures.py  he_person.py  he_project.py  he_project2activity.py  transforms_list.txt
