[tool.poetry]
name = "sheet-to-triples"
license = "GPL-3.0-or-later"
version = "0.1.0"
authors = ["Martin Packman <martin.packman@visual-meaning.com>"]
description = "Convert tabular data into triples."

[tool.poetry.dependencies]
python = "^3.8.10"
pycountry = "^22"
# openpyxl broke parsing some workbooks with filters and the maintainer made
# the classic mistake of blocking the regression fix on a rethink of how
# filters get handled so the issue has persisted for nearly a year.
# https://foss.heptapod.net/openpyxl/openpyxl/-/issues/1967
# https://foss.heptapod.net/openpyxl/openpyxl/-/merge_requests/425
# Pin the last working version for now.
openpyxl = "=3.0.10"
rdflib = {version = "^7", extras = ["sparql"]}
xlrd = "^2"

[tool.poetry.dev-dependencies]
ruff = "^0.0.292"
coverage = "^7"
pyfakefs = "^5"

[tool.ruff]
select = ["C9", "E", "F", "W"]
