[project]
name = "sheet-to-triples"
license = "GPL-3.0-or-later"
license-files = ["COPYING"]
version = "0.1.0"
authors = [{"name"="Martin Packman", "email"="martin.packman@visual-meaning.com"}]
description = "Convert tabular data into triples."

[tool.poetry.dependencies]
python = "^3.9.13"
pycountry = "^22"
openpyxl = "^3.1.5"
rdflib = {version = "^7", extras = ["sparql"]}
xlrd = "^2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.292"
coverage = "^7"
pyfakefs = "^5.7.0"

[tool.ruff]
select = ["C9", "E", "F", "W"]

[tool.setuptools]
packages = ["sheet_to_triples"]
